Adição de lógica de autorização no sistema utilizando spring security

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
         client:
             registration:
                 keycloak:
-                    client-id: agiota-api
+                    client-id: agiota-application
                     authorization-grant-type: authorization_code
                     scope: openid
             provider:
